Added the remaining inner pages. Cleaned up code for homepage. Need to make homepage responsive

--- a/our-programs.html
+++ b/our-programs.html
@@ -65,7 +65,7 @@
 			<div class="container " >
 				
 				<div class="row">
-					<div class="col-xs-12 offset-md-1 mt-3 mb-2">
+					<div class="col-xs-12 offset-md-1">
 						<h1 class="content-heading">BAR PROCESS MANAGEMENT PROGRAM</h1>
 					</div>
 				</div>
@@ -180,7 +180,7 @@
 
 							</div>
 							
-							<div class="apply-btn text-xs-center ">
+							<div class="apply-btn text-xs-center offset-md-2">
 								<h3>
 									<a href="#" >Apply</a>
 								</h3>
